[package]
name = "sht"
description = "A TUI csv editor"
version = "0.1.0"
authors = ["Evan Lloyd New-Schmidt <evan@new-schmidt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1.1"
cursive = "0.20.0"
log = "0.4.13"
cursive_table_view = "0.14.0"
