[package]
name = "sht"
description = "A TUI csv editor"
version = "0.1.0"
authors = ["Evan Lloyd New-Schmidt <evan@new-schmidt.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1.1"
log = "0.4.17"
tui = "0.19.0"
crossterm = "0.26.1"
once_cell = "1.17.1"
