[package]
name = "sht"
description = "A TUI csv editor"
version = "0.1.0"
authors = ["Evan Lloyd New-Schmidt <evan@new-schmidt.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1.1"
log = "0.4.17"
tui = "0.19.0"
crossterm = { version = "0.26.1", features = ["serde"] }
once_cell = "1.17.1"
unicode-width = "0.1.10"
unicode-segmentation = "1.10.1"
env_logger = "0.10.0"
atty = "0.2.14"
strum = { version = "0.24.1", features = ["derive"] }
enum-iterator = "1.4.0"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
